GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Pre_Travel__c.field-meta.xml
<CustomField>
    <fullName>Pre_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a pre-travel compensation</description>
    <inlineHelpText>\Is this a pre-travel compensation?</inlineHelpText>
    <label>Pre-Travel</label>
    <type>Checkbox</type>
</CustomField>