GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <formula>Source_Ticket__r.Preferred_Language__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Language</label>
    <type>Text</type>
</CustomField>