GearsetPOC/force-app/main/default/objects/Compensation__c/fields/PRR_Amount__c.field-meta.xml
<CustomField>
    <fullName>PRR_Amount__c</fullName>
    <label>PRR Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>