GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Reason_2__c</fullName>
    <label>Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_1__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amend a booking</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Booking tickets</fullName>
            </value>
            <value>
                <fullName>Complaint Process</fullName>
            </value>
            <value>
                <fullName>Contact Centre / Station booking</fullName>
            </value>
            <value>
                <fullName>Contact Transfer</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Final Balance</fullName>
            </value>
            <value>
                <fullName>Groups Information</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Information enquiry</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Onboard Catering</fullName>
            </value>
            <value>
                <fullName>Onboard Experience</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Special Requests</fullName>
            </value>
            <value>
                <fullName>Station</fullName>
            </value>
            <value>
                <fullName>Travel Agent / 3rd Party Booking</fullName>
            </value>
            <value>
                <fullName>Unable to book</fullName>
            </value>
            <value>
                <fullName>Website booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>