GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Reason_3__c.field-meta.xml
<CustomField>
    <fullName>Reason_3__c</fullName>
    <label>Reason 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_2__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Issues</fullName>
            </value>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Add additional pax</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Announcements &amp; signage</fullName>
            </value>
            <value>
                <fullName>Arrivals</fullName>
            </value>
            <value>
                <fullName>Baggage Policy</fullName>
            </value>
            <value>
                <fullName>Bike Policy</fullName>
            </value>
            <value>
                <fullName>Birthday / Anniversary</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Booking horizon</fullName>
            </value>
            <value>
                <fullName>Business Premier Lounge</fullName>
            </value>
            <value>
                <fullName>Canx</fullName>
            </value>
            <value>
                <fullName>Carte Classique Rewards</fullName>
            </value>
            <value>
                <fullName>Charity Request</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Cleanliness</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Compensation Challenge</fullName>
            </value>
            <value>
                <fullName>Compensation Information</fullName>
            </value>
            <value>
                <fullName>Concessions</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
            </value>
            <value>
                <fullName>Content / Tone</fullName>
            </value>
            <value>
                <fullName>Core destinations</fullName>
            </value>
            <value>
                <fullName>Customer not there</fullName>
            </value>
            <value>
                <fullName>Delay Information</fullName>
            </value>
            <value>
                <fullName>Departure Lounge</fullName>
            </value>
            <value>
                <fullName>Destinations</fullName>
            </value>
            <value>
                <fullName>Doors &amp; steps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>