GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reason Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Reason_Code__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Reason_Code__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>