GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <inlineHelpText>This is used as an external reference field for the Oracle interface to find and update records to show they have been sent to Oracle. Unique ID. Integer. ENCLOSURE_COMP_IDs are unique and will be processed once only. Might not be used anymore by Kyriba?</inlineHelpText>
    <label>Kyriba Reference</label>
    <type>AutoNumber</type>
</CustomField>