GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <label>Refund Method (Card Refund)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Datacash</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>