GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Reset_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Reset_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will only apply for compensations which have not generated a voucher (Not Claimed).</inlineHelpText>
    <label>Reset Failed Compensation?</label>
    <type>Checkbox</type>
</CustomField>