GearsetPOC/force-app/main/default/objects/Compensation__c/fields/ScreenResolution__c.field-meta.xml
<CustomField>
    <fullName>ScreenResolution__c</fullName>
    <label>Screen Resolution</label>
    <length>200</length>
    <type>Text</type>
</CustomField>