GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Sent_For_Payment__c.field-meta.xml
<CustomField>
    <fullName>Sent_For_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>