GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Source_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Last_Name__c</fullName>
    <formula>Source_Ticket__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Last Name</label>
    <type>Text</type>
</CustomField>