GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Source_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Source_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ticket that led to the creation of compensation record</description>
    <inlineHelpText>Ticket that led to the creation of compensation record</inlineHelpText>
    <label>Source Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Compensations (Source Ticket)</relationshipLabel>
    <relationshipName>Compensation</relationshipName>
    <type>Lookup</type>
</CustomField>