GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Standard_GBP_Amount__c.field-meta.xml
<CustomField>
    <fullName>Standard_GBP_Amount__c</fullName>
    <description>Convert from payment amount and currency into a standard GBP field for assessment of total value</description>
    <label>Standard GBP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>