GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IMAGE(IF(
TEXT(Claim_Status__c) = &#39;Claimed&#39; &amp;&amp; TEXT(Integration_Status__c) = &#39;Success&#39;, 
&quot;/img/msg_icons/confirm16.png&quot;, 
       IF(
TEXT(Integration_Status__c) = &#39;Failed&#39;, 
&quot;/img/msg_icons/error16.png&quot;, 


IF(TEXT(Claim_Status__c) = &#39;Not Started&#39; &amp;&amp; TEXT(Integration_Status__c) = &#39;Not Claimed&#39;,&quot;/img/checkbox_unchecked.gif&quot;,&quot;/img/icon/flag16.png&quot;)

)
         ),&quot;Status Ind&quot;
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>