GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Swift_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Sort_Code__c</fullName>
    <inlineHelpText>Bank Identifier Code</inlineHelpText>
    <label>BIC/Swift Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>