GearsetPOC/force-app/main/default/objects/Compensation__c/fields/TCN_10__c.field-meta.xml
<CustomField>
    <fullName>TCN_10__c</fullName>
    <label>TCN 10</label>
    <length>9</length>
    <type>Text</type>
</CustomField>