GearsetPOC/force-app/main/default/objects/Compensation__c/fields/TCN_2__c.field-meta.xml
<CustomField>
    <fullName>TCN_2__c</fullName>
    <label>TCN 2</label>
    <length>9</length>
    <type>Text</type>
</CustomField>