GearsetPOC/force-app/main/default/objects/Compensation__c/fields/TCN_3__c.field-meta.xml
<CustomField>
    <fullName>TCN_3__c</fullName>
    <label>TCN 3</label>
    <length>9</length>
    <type>Text</type>
</CustomField>