GearsetPOC/force-app/main/default/objects/Compensation__c/fields/TCN__c.field-meta.xml
<CustomField>
    <fullName>TCN__c</fullName>
    <label>TCN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>