GearsetPOC/force-app/main/default/objects/Compensation__c/fields/TECH_Dell_Error__c.field-meta.xml
<CustomField>
    <fullName>TECH_Dell_Error__c</fullName>
    <inlineHelpText>This field will only be populated if there has been an integration error.</inlineHelpText>
    <label>Boomi Technical Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>