GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Temporary__c.field-meta.xml
<CustomField>
    <fullName>Temporary__c</fullName>
    <label>Temporary</label>
    <length>10</length>
    <type>Text</type>
</CustomField>