GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Amount_DisplayPop__c.field-meta.xml
<CustomField>
    <fullName>THA_Amount_DisplayPop__c</fullName>
    <description>To capture legacy Compensation Amount  from old Thango system</description>
    <inlineHelpText>To capture legacy Compensation Amount  from old Thango system</inlineHelpText>
    <label>Amount</label>
    <length>12</length>
    <type>Text</type>
</CustomField>