GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Approval_date__c.field-meta.xml
<CustomField>
    <fullName>THA_Approval_date__c</fullName>
    <description>To capture legacy Approval date from old Thango system</description>
    <inlineHelpText>To capture legacy Approval date from old Thango system</inlineHelpText>
    <label>Approval date</label>
    <type>DateTime</type>
</CustomField>