GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_CFM__c.field-meta.xml
<CustomField>
    <fullName>THA_CFM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture legacy CFM data from old Thango system.</description>
    <inlineHelpText>To capture legacy CFM data from old Thango system.</inlineHelpText>
    <label>CFM</label>
    <type>Checkbox</type>
</CustomField>