GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Compensation_category__c.field-meta.xml
<CustomField>
    <fullName>THA_Compensation_category__c</fullName>
    <description>To capture legacy Compensation category from old Thango system</description>
    <inlineHelpText>To capture legacy Compensation category from old Thango system</inlineHelpText>
    <label>Compensation category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Disease / Passed Away</fullName>
            </value>
            <value>
                <fullName>Customer Mistake</fullName>
            </value>
            <value>
                <fullName>Thalys Gesture</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Extension Voucher Miles</fullName>
            </value>
            <value>
                <fullName>Extension Voucher SC</fullName>
            </value>
            <value>
                <fullName>Travel Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>