GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Compensation_Percent__c.field-meta.xml
<CustomField>
    <fullName>THA_Compensation_Percent__c</fullName>
    <description>To capture legacy Compensation percent from old Thango system</description>
    <inlineHelpText>To capture legacy Compensation percent from old Thango system</inlineHelpText>
    <label>Compensation Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>