GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Compensation_Status_Miles__c.field-meta.xml
<CustomField>
    <fullName>THA_Compensation_Status_Miles__c</fullName>
    <description>To capture legacy Compensation Status of Miles from old Thango system</description>
    <inlineHelpText>To capture legacy Compensation Status of Miles from old Thango system</inlineHelpText>
    <label>Compensation Status (Miles)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Pending Validation</fullName>
            </value>
            <value>
                <fullName>2-Validated</fullName>
            </value>
            <value>
                <fullName>3-Done</fullName>
            </value>
            <value>
                <fullName>4-Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>