GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Compensation_SVOC_ID__c.field-meta.xml
<CustomField>
    <fullName>THA_Compensation_SVOC_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Legacy SVOC Id from Thango</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy SVOC Id from Thango</inlineHelpText>
    <label>Compensation SVOC ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>