GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Compensation_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>THA_Compensation_Validation_Status__c</fullName>
    <description>To capture legacy Compensation Validation Status from old Thango system</description>
    <inlineHelpText>To capture legacy Compensation Validation Status from old Thango system</inlineHelpText>
    <label>Compensation Validation Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>