GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>THA_Delay_Reason__c</fullName>
    <description>To capture legacy Delay Reason  on Compensation record  from old Thango system</description>
    <inlineHelpText>To capture legacy Delay Reason  on Compensation record  from old Thango system</inlineHelpText>
    <label>Delay Reason</label>
    <type>TextArea</type>
</CustomField>