GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Origin__c.field-meta.xml
<CustomField>
    <fullName>THA_Origin__c</fullName>
    <description>To capture legacy Thalys Origin on Compensation from old Thango system</description>
    <inlineHelpText>To capture legacy Thalys Origin on Compensation from old Thango system</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aachen Hbf</fullName>
            </value>
            <value>
                <fullName>Aime-La Plagne</fullName>
            </value>
            <value>
                <fullName>Aix-en-Provence</fullName>
            </value>
            <value>
                <fullName>Albertville</fullName>
            </value>
            <value>
                <fullName>Amsterdam Centraal</fullName>
            </value>
            <value>
                <fullName>Antwerpen-Centraal</fullName>
            </value>
            <value>
                <fullName>Avignon</fullName>
            </value>
            <value>
                <fullName>Bordeaux</fullName>
            </value>
            <value>
                <fullName>Bourg-St-Maurice</fullName>
            </value>
            <value>
                <fullName>Brugge</fullName>
            </value>
            <value>
                <fullName>Brussels Airport</fullName>
            </value>
            <value>
                <fullName>Bruxelles-Midi</fullName>
            </value>
            <value>
                <fullName>Chambery-Challes-Les-Eaux</fullName>
            </value>
            <value>
                <fullName>Charleroi-Sud</fullName>
            </value>
            <value>
                <fullName>Dortmund Hbf</fullName>
            </value>
            <value>
                <fullName>Duisburg Hbf</fullName>
            </value>
            <value>
                <fullName>Düsseldorf Flughafen</fullName>
            </value>
            <value>
                <fullName>Düsseldorf Hbf</fullName>
            </value>
            <value>
                <fullName>Essen Hbf</fullName>
            </value>
            <value>
                <fullName>Gent-Sint-Pieters</fullName>
            </value>
            <value>
                <fullName>Köln-Ehrenfeld</fullName>
            </value>
            <value>
                <fullName>Köln Hbf</fullName>
            </value>
            <value>
                <fullName>Landry</fullName>
            </value>
            <value>
                <fullName>Liège</fullName>
            </value>
            <value>
                <fullName>Lille Europe</fullName>
            </value>
            <value>
                <fullName>London StPancras</fullName>
            </value>
            <value>
                <fullName>Marne-la-Vallée Chessy Disneyland® Paris</fullName>
            </value>
            <value>
                <fullName>Marseille</fullName>
            </value>
            <value>
                <fullName>Mons</fullName>
            </value>
            <value>
                <fullName>Moûtiers Salins Brides L Bains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>