GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Related_Tag_Text__c.field-meta.xml
<CustomField>
    <fullName>THA_Related_Tag_Text__c</fullName>
    <description>Legacy field for Tag Text from Thango.</description>
    <inlineHelpText>Legacy field for Tag Text from Thango.</inlineHelpText>
    <label>Related Tag Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>