GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_TECH_IsValid_For_Payment__c.field-meta.xml
<CustomField>
    <fullName>THA_TECH_IsValid_For_Payment__c</fullName>
    <description>Legacy tech field</description>
    <inlineHelpText>Legacy tech field</inlineHelpText>
    <label>TECH IsValid For Payment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>