GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_TECH_PNR_TCN_TRAVEL_DATE__c.field-meta.xml
<CustomField>
    <fullName>THA_TECH_PNR_TCN_TRAVEL_DATE__c</fullName>
    <description>Legacy tech field</description>
    <inlineHelpText>Legacy tech field</inlineHelpText>
    <label>Duplicate found with PNR/TCN/TRAVEL DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>