GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_TTC_Segment__c.field-meta.xml
<CustomField>
    <fullName>THA_TTC_Segment__c</fullName>
    <description>To capture legacy Loyalty Segment  on Compensation record  from old Thango system</description>
    <inlineHelpText>To capture legacy Loyalty Segment  on Compensation record  from old Thango system</inlineHelpText>
    <label>Loyalty Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>