GearsetPOC/force-app/main/default/objects/Compensation__c/fields/THA_Voucher_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>THA_Voucher_Amount_3__c</fullName>
    <description>To capture historic and in-flight e-voucher amounts</description>
    <inlineHelpText>To capture historic and in-flight e-voucher amounts</inlineHelpText>
    <label>Voucher Amount 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>