GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Ticket_Entered__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Entered__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to validate if PRR can be created</description>
    <label>Ticket Entered?</label>
    <type>Checkbox</type>
</CustomField>