GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Ticket_HistoryTracking__c.field-meta.xml
<CustomField>
    <fullName>Ticket_HistoryTracking__c</fullName>
    <label>Ticket_HistoryTracking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>