GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Ticket_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Membership_Number__c</fullName>
    <label>Ticket Membership Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>