GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Ticket_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Read_Only__c</fullName>
    <label>Ticket (Read Only)</label>
    <length>28</length>
    <type>Text</type>
</CustomField>