GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Total_Compensation_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Compensation_Amt__c</fullName>
    <formula>IF(RecordType.DeveloperName = &#39;Online&#39;, Total_Online_Compensation__c, Payment_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field used for consolidated reports.</inlineHelpText>
    <label>Total Compensation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>